# prisma-sase-docker

./: .gitignore  README.md  pyproject.toml  tasks.py
ansible/: .vault_pass
ansible/addresses/: inventory.yaml
ansible/tags/: ansible.cfg  tags.yaml
docker/ansible/: Dockerfile  requirements.txt
docker/golang/: Dockerfile
docker/python/: Dockerfile  ipython_config.py  requirements.txt
docker/terraform/: Dockerfile
docs/: environment.md  vault.md
examples/ansible/addresses/group_vars/all/: authentication.yaml.example
examples/python/: config.yml.example
python/: .env.example
python/dayone_panorama/: config_panorama.py
python/find_address_object_usage/: app.py
python/sip-alg-disable/: sip.py
python/update-interface-template/: app.py
